# clang-rs

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  NOTICE.txt  README.md  appveyor.yml  build.rs
.github/workflows/: ci.yml
ci/: before_install.sh  install.bat  install.ps1  script.sh
examples/: structs.c  structs.rs
src/: completion.rs  diagnostic.rs  documentation.rs  error.rs  ffi.rs  lib.rs  sonar.rs  source.rs  token.rs  utility.rs
tests/: completion.rs  diagnostic.rs  documentation.rs  lib.rs  sonar.rs  source.rs  tests.rs  token.rs
