[package]

name = "clang"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.9.0"

readme = "README.md"
license = "Apache-2.0"

description = "An idiomatic Rust wrapper for libclang."

documentation = "https://kylemayes.github.io/clang-rs/all/clang"
repository = "https://github.com/KyleMayes/clang-rs"

[features]

static = ["clang-sys/static"]

clang_3_5 = ["clang-sys/clang_3_5"]
clang_3_6 = ["clang-sys/clang_3_6", "gte_clang_3_6"]
clang_3_7 = ["clang-sys/clang_3_7", "gte_clang_3_6", "gte_clang_3_7"]
clang_3_8 = ["clang-sys/clang_3_8", "gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8"]

gte_clang_3_6 = []
gte_clang_3_7 = []
gte_clang_3_8 = []

[dependencies]

clang-sys = "0.5.2"
lazy_static = "0.2.1"
libc = "0.2.11"

[dependencies.clippy]

version = "0.0.67"
optional = true

[[test]]

name = "tests"
harness = true
