[package]

name = "clang"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "2.0.0"

readme = "README.md"
license = "Apache-2.0"

description = "A somewhat idiomatic Rust wrapper for libclang."

documentation = "https://docs.rs/clang"
repository = "https://github.com/KyleMayes/clang-rs"

autotests = false

[features]

clang_3_5 = ["clang-sys/clang_3_5"]
clang_3_6 = ["clang-sys/clang_3_6", "clang_3_5"]
clang_3_7 = ["clang-sys/clang_3_7", "clang_3_6"]
clang_3_8 = ["clang-sys/clang_3_8", "clang_3_7"]
clang_3_9 = ["clang-sys/clang_3_9", "clang_3_8"]
clang_4_0 = ["clang-sys/clang_4_0", "clang_3_9"]
clang_5_0 = ["clang-sys/clang_5_0", "clang_4_0"]
clang_6_0 = ["clang-sys/clang_6_0", "clang_5_0"]
clang_7_0 = ["clang-sys/clang_7_0", "clang_6_0"]
clang_8_0 = ["clang-sys/clang_8_0", "clang_7_0"]
clang_9_0 = ["clang-sys/clang_9_0", "clang_8_0"]
clang_10_0 = ["clang-sys/clang_10_0", "clang_9_0"]

runtime = ["clang-sys/runtime"]
static = ["clang-sys/static"]

[dependencies]

clang-sys = "1"
libc = "0.2.39"

[[test]]

name = "tests"
harness = true

[package.metadata.docs.rs]

features = ["clang_10_0"]
